// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectedInvestigationItem Snapshot matches snapshot 1`] = `
<div
  class="cds--css-grid"
  data-testid="selected-investigation-item-grid-test-investigation-1"
>
  <div
    class="selectedInvestigationTitle cds--sm:col-span-4 cds--md:col-span-7 cds--lg:col-span-11 cds--xlg:col-span-11 cds--css-grid-column"
  >
    <span
      data-testid="investigation-display-name-test-investigation-1"
    >
      Complete Blood Count (CBC)
    </span>
    <a
      class="cds--link addInvestigationNote"
      data-testid="investigation-add-note-link-test-investigation-1"
      href="#"
    >
      Add Note
    </a>
  </div>
  <div
    class="selectedInvestigationUrgentPriority cds--sm:col-span-4 cds--md:col-span-2 cds--lg:col-span-4 cds--xlg:col-span-4 cds--css-grid-column"
  >
    <div
      class="cds--form-item cds--checkbox-wrapper"
    >
      <input
        class="cds--checkbox"
        data-testid="investigation-priority-checkbox-test-investigation-1"
        id="investigation-priority-checkbox-test-investigation-1"
        type="checkbox"
      />
      <label
        class="cds--checkbox-label"
        for="investigation-priority-checkbox-test-investigation-1"
        title=""
      >
        <span
          class="cds--checkbox-label-text"
          dir="auto"
        >
          Urgent
        </span>
      </label>
      <div
        class="cds--checkbox__validation-msg"
      />
    </div>
  </div>
</div>
`;

exports[`SelectedInvestigationItem Snapshot matches snapshot with existing note 1`] = `
<div
  class="cds--css-grid"
  data-testid="selected-investigation-item-grid-test-investigation-1"
>
  <div
    class="selectedInvestigationTitle cds--sm:col-span-4 cds--md:col-span-7 cds--lg:col-span-11 cds--xlg:col-span-11 cds--css-grid-column"
  >
    <span
      data-testid="investigation-display-name-test-investigation-1"
    >
      Complete Blood Count (CBC)
    </span>
  </div>
  <div
    class="selectedInvestigationUrgentPriority cds--sm:col-span-4 cds--md:col-span-2 cds--lg:col-span-4 cds--xlg:col-span-4 cds--css-grid-column"
  >
    <div
      class="cds--form-item cds--checkbox-wrapper"
    >
      <input
        class="cds--checkbox"
        data-testid="investigation-priority-checkbox-test-investigation-1"
        id="investigation-priority-checkbox-test-investigation-1"
        type="checkbox"
      />
      <label
        class="cds--checkbox-label"
        for="investigation-priority-checkbox-test-investigation-1"
        title=""
      >
        <span
          class="cds--checkbox-label-text"
          dir="auto"
        >
          Urgent
        </span>
      </label>
      <div
        class="cds--checkbox__validation-msg"
      />
    </div>
  </div>
</div>
`;
